--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <header class="bg-E3EFD3 shadow-premium fixed top-0 left-0 w-full z-20">
         <nav class="container mx-auto px-8 py-4">
             <div class="flex justify-between items-center">
-                <a href="/" class="flex items-center font-bold text-xl text-gray-800">
+                <a href="index.html" class="flex items-center font-bold text-xl text-gray-800">
                     <img width="32" height="32" src="https://img.icons8.com/windows/32/fiber.png" alt="fiber"/>
                     <span class="font-serif">YumEco Aircons</span> <span class="font-semibold"></span>
                 </a>
