--- a/whyus.html
+++ b/whyus.html
@@ -210,6 +210,32 @@
         </div>
     </section>
 
+        <section class="max-w-6xl mx-auto px-8 mt-10">
+        <div class="bg-white border-premium border rounded-lg py-16 px-8 md:px-16">
+            <h2 class="text-3xl font-bold mb-8 text-gray-800 font-serif text-center">Our Mission & Vision</h2>
+            <div class="container mx-auto text-center">
+                <div class="mb-10">
+                    <div class="flex items-center justify-center mb-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 text-345635 mr-3">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M3 7.5L7.5 3m0 0l4.5 4.5M7.5 3v13.5m9-13.5L16.5 3m0 0l4.5 4.5M16.5 3v13.5m-9 0L9 21m0 0l-4.5-4.5M9 21H15" />
+                        </svg>
+                        <h3 class="text-2xl font-bold text-gray-800 font-serif">Our Mission</h3>
+                    </div>
+                    <p class="text-lg text-gray-700 leading-relaxed max-w-xl mx-auto">To provide the residents and businesses of Imus and Calabarzon with reliable, efficient, and eco-friendly air conditioning solutions, delivered with exceptional expertise and a commitment to customer satisfaction.</p>
+                </div>
+                <div>
+                    <div class="flex items-center justify-center mb-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 text-345635 mr-3">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12l8.954-8.955c.008-.008.017-.017.026-.026a2.25 2.25 0 0 1 3.182 3.182L13.879 12l-8.954 8.955c-.008.008-.017.017-.026.026a2.25 2.25 0 0 1-3.182-3.182L10.121 12H3m18 0h-2.297m0 0-2.898-2.897M21 12l-2.898 2.897m2.898-2.897-2.898 2.897" />
+                        </svg>
+                        <h3 class="text-2xl font-bold text-gray-800 font-serif">Our Vision</h3>
+                    </div>
+                    <p class="text-lg text-gray-700 leading-relaxed max-w-xl mx-auto">To be the leading and most trusted provider of sustainable air conditioning services in the Calabarzon region, recognized for our quality workmanship, environmental responsibility, and dedication to creating comfortable and healthy indoor environments.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <section class="py-24 bg-secondary-premium shadow-premium rounded-lg mt-10">
         <div class="container mx-auto text-center">
             <h2 class="text-3xl font-bold mb-10 text-gray-800 font-serif">Ready to Experience the YumEco Difference?</h2>
